--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <title>Mock Site</title>
 </head>
 <body>
+    <div>
+        <img class="hamburger" src="button.png" />
+    </div>
     <main>
         <header>
             <div class="title">
-                pathfinder2 easy library
+                Pathfinder2 easy Library
             </div>
             <div class="search">
                 Search any action...
+                <img class="huh" src="https://pf2.easytool.es/img/search-duotoneL.svg" />
             </div>
         </header>
         <section class="content">
@@ -122,5 +126,8 @@
             <div class="email">✉️ivan6octubre@gmail.com</div>
         </nav>
     </main>
+    <div>
+        <img class="dice" src="dice.png" />
+    </div>
 </body>
 </html>
